<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>genSquarePsWidget</class>
 <widget class="QWidget" name="genSquarePsWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>276</width>
    <height>248</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QLabel" name="xShift_lbl">
       <property name="text">
        <string>X Shift:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="xScale_lbl">
       <property name="text">
        <string>X Scale:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="yShift_lbl">
       <property name="text">
        <string>Y Shift:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="yScale_lbl">
       <property name="text">
        <string>Y Scale:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="samplesPerPeriod_lbl">
       <property name="text">
        <string>Samples Per Period:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="numSamplesDuty_lbl">
       <property name="text">
        <string>Num Samples Duty:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLineEdit" name="xShift_le"/>
     </item>
     <item>
      <widget class="QLineEdit" name="xScale_le"/>
     </item>
     <item>
      <widget class="QLineEdit" name="yShift_le"/>
     </item>
     <item>
      <widget class="QLineEdit" name="yScale_le"/>
     </item>
     <item>
      <widget class="QLineEdit" name="samplesPerPeriod_le"/>
     </item>
     <item>
      <widget class="QLineEdit" name="numSamplesDuty_le"/>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
